fix: make odd layer names have more visible backgrounds

--- a/apps/app/src/react/styles/part.scss
+++ b/apps/app/src/react/styles/part.scss
@@ -65,7 +65,7 @@
 			font-size: 1.2rem;
 
 			&:nth-child(odd) {
-				background: rgba(255, 255, 255, 0.1);
+				background: rgba(255, 255, 255, 0.2);
 			}
 
 			&:not(:last-child) {
